@@ -1,8 +1,5 @@
 &1
 ChangeLog
-MANIFEST			This list of files
-Makefile.PL
-README
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
@@ -11,10 +8,12 @@ inc/Module/Install/Include.pm
 inc/Module/Install/Makefile.pm
 inc/Module/Install/Metadata.pm
 inc/Module/Install/Win32.pm
-inc/Test.pm
 inc/Test/Builder.pm
 inc/Test/More.pm
 lib/WWW/Search/Ebay.pm
 lib/WWW/Search/Ebay/ByEndDate.pm
 lib/WWW/Search/Ebay/Completed.pm
+Makefile.PL
+MANIFEST			This list of files
+README
 test.pl
